--- a/index.html
+++ b/index.html
@@ -139,12 +139,12 @@
             </div>
 
             <div class="product-card">
-                <img src="assets/Sachicha.png" alt="Sandwich Tamanho Família">
-                <h3>Sandwich Tamanho Família</h3>
-                <p class="price">R$ 44,90</p>
-                <p class="description">Desafiamos você a comer esse lanche inteiro.</p>
-                <button onclick="openModal(6, 'Sandwich Tamanho Família', 44.90, 'Desafiamos você a comer esse lanche inteiro.', 'assets/Sachicha.png')">Adicionar ao Carrinho</button>
-            </div>
+              <img src="assets/Sachicha.png" alt="Sandwich Tamanho Família">
+              <h3>Sandwich Tamanho Família</h3>
+              <p class="price">R$ 44,90</p>
+              <p class="description">Desafiamos você a comer esse lanche inteiro.</p>
+              <button onclick="openModal(6, 'Sandwich Tamanho Família', 44.90, 'Desafiamos você a comer esse lanche inteiro.', 'assets/Sachicha.png')">Adicionar ao Carrinho</button>
+          </div>
 
         </section>
 
@@ -188,7 +188,7 @@
                 <h3>Suco do Rigby</h3>
                 <p class="price">R$ 9,90</p>
                 <p class="description">Bebida refrescante para qualquer hora do dia.</p>
-                <button onclick="openModal(10, 'Suco do Rigby', 9.90, 'Bebida refrescante para qualquer hora do dia.', 'assets/refrigerante.png')">Adicionar ao Carrinho</button>
+                <button onclick="openModal(10, 'Suco do Rigby', 9.90, 'Bebida refrescante para qualquer hora do dia.', 'assets/Suco do riby.png')">Adicionar ao Carrinho</button>
             </div>  
         </section>
 
