--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
 </head>
 <body>
+    <!-- Barra de paginas -->
     <header>
         <div class="logo">
             <h1>Lanche Legal</h1>
@@ -18,8 +19,9 @@
             <ul>
 
                 <li><a href="index.html">Cardapio</a></li>
-                <li><a href="#sobre">Sobre</a></li>
+                <li><a href="sobre.html">Sobre</a></li>
                 <li><a href="contato.html">Contato</a></li>
+                <li><a href="login.html">Conta</a></li>
             </ul>
         </nav>
         <div class="cart-icon" onclick="toggleCart()">
@@ -27,7 +29,7 @@
             <span id="cart-count">0</span>
         </div>
     </header>
-
+      <!-- Carrossel -->
     <main>
         <section class="carrossel">
         <h1>________________________________________</h1>
@@ -94,6 +96,7 @@
             </button>
           </div>
         </section>
+        <!-- Cards de laches -->
         <section class="lanches">
             <h1>______________________________</h1>
             <h1>___LANCHES____________</h1>
@@ -147,7 +150,7 @@
           </div>
 
         </section>
-
+          <!-- Cards de Sobremesas -->
         <section class="sobremesas">
             <h1>_________________________________</h1>
             <h1>__SOBREMESAS___________</h1>
@@ -170,7 +173,7 @@
             </div>  
 
         </section>
-
+          <!-- Cards de Bebidas -->
         <section class="bebidas">
             <h1>______________________________</h1>
             <h1>____BEBIDAS___________</h1>
