--- a/sobre.html
+++ b/sobre.html
@@ -9,7 +9,6 @@
     
 </head>
 <body>
-    <!-- Barra de paginas -->
     <header>
         <div class="logo">
             <h1>Lanche Legal</h1>
@@ -17,7 +16,7 @@
         <nav class="menu">
             <ul>
                 <li><a href="index.html">Lanches</a></li>
-                <li><a href="sobre.html">Sobre</a></li>
+                <li><a href="#sobre">Sobre</a></li>
                 <li><a href="contato.html">Contato</a></li>
             </ul>
         </nav>
@@ -26,28 +25,27 @@
             <span id="cart-count">0</span>
         </div>
     </header>
-        <!-- Cards com os aplicativos -->
+
     <main>
         <section class="contato">
             <div class="product-card">
-                <img src="assets/zapzap.png" alt="whatsapp">
-                <h3>WHATSAPP</h3>
-                <p class="description">Ligue para nós.</p>
-                <button id="Botao1" type="button" class="btn btn-link">Acessar</button>
+                <img src="assets/download.png">
+                <h3>Sobre</h3>
+                <p class="description">LANCHE LEGAL: Peça online hambúrgueres, hot dogs, sanduíches e porções com praticidade e entrega rápida. Sua fome satisfeita com sabor e facilidade!</p>
             </div>
 
             <div class="product-card">
-                <img src="assets/Instagram.png" alt="Instagram">
-                <h3>INSTAGRAM</h3>
-                <p class="description">Siga-nos.</p>
-                <button id="Botao2" type="button" class="btn btn-link">Acessar</button>
+                <img src="assets/Localização.png">
+                <h3>Localização</h3>
+                <p class="description">R. José Francisco Sodré, 169 - Praia João Rosa, Biguaçu - SC, 88160-000, Brasil.</p>
+                <button id="Botao4" type="button" class="btn btn-link">Acessar</button>
             </div>
 
             <div class="product-card">
-                <img src="assets/Email.png" alt="email">
-                <h3>E-MAIL</h3>
-                <p class="description">Envie-nos um e-mail.</p>
-                <button id="Botao3" type="button" class="btn btn-link">Acessar</button>
+                <img src="assets/ChatGPT Image 22 de abr. de 2025, 21_33_02.png">
+                <h3>Nos visete</h3>
+                <p class="description">Venha nos visitar e experimentar nossos lanches e sobremesas</p>
+                <button id="Botao5" type="button" class="btn btn-link">-</button>
             </div>
 
         </section>
