--- a/login.html
+++ b/login.html
@@ -4,21 +4,41 @@
     <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Login</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="login">
-        <input type="text" id="login" /> 
-        <input type="password" id="senha" />
-        <button onclick="logar()">Logar</button>
+    <div class="d-flex justify-content-center align-items-center vh-100">
+        <div class="card shadow" style="width: 22rem;">
+            <div class="card-body">
+                <h5 class="card-title text-center mb-4">Login</h5>
+                <div class="mb-3">
+                    <label for="login" class="form-label">Usuário</label>
+                    <input type="text" class="form-control" id="login" placeholder="Digite seu usuário">
+                </div>
+                <div class="mb-3">
+                    <label for="senha" class="form-label">Senha</label>
+                    <input type="password" class="form-control" id="senha" placeholder="Digite sua senha">
+                </div>
+                <button class="btn btn-primary w-100" onclick="logar()">Logar</button>
+            </div>
+        </div>
     </div>
+    <script>
+        function logar() {
+            if (document.getElementById("login").value.length <= 0) { 
+                alert("Login vazio"); 
+                return; 
+            }
+            if (document.getElementById("senha").value.length <= 0) { 
+                alert("Senha vazia"); 
+                return; 
+            }
+            window.location.href = "index.html";
+        }
+    </script>
 </body>
-<script>
-    function logar() {
-        console.log(document.getElementById("login").innerHTML.length)
-        if(document.getElementById("login").value.length<=0){ alert("login vazio"); return;}
-        if(document.getElementById("senha").value.length<=0){ alert("senha vazia"); return;}
-        window.location.href = "index.html";
-    }
-</script>
 </html>
